--- a/src/style.css
+++ b/src/style.css
@@ -78,16 +78,28 @@ body {
 
 .card {
     width: 24%;
+    min-width: 150px;
     aspect-ratio: 2 / 3;
-    background-color: rgb(109, 7, 7);
+    background-color: rgb(175, 12, 12);
     border-radius: 8px;
     color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-weight: bold;
 }
 
+.card:hover{
+    cursor: pointer;
+    background-color: rgb(82, 7, 7);
+}
+
+.card-img{
+    margin-top: 10%;
+    width: 80%;
+    aspect-ratio: 1 / 1;
+}
 
 #select-container{
     width: 100%;
