--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ body {
 
 .card {
     width: 24%;
-    min-width: 150px;
+    min-width: 200px;
     aspect-ratio: 2 / 3;
     background-color: rgb(175, 12, 12);
     border-radius: 8px;
@@ -87,7 +87,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
+    font-size: 1vw;
 }
 
 .card:hover{
@@ -105,4 +105,28 @@ body {
     width: 100%;
     aspect-ratio: 16 / 1;
     background-color: rgb(0, 81, 255);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#pokemon-screen, #route-screen, #region-screen {
+    flex: 1;
+    height: 100%;
+    background-color: rgb(8, 104, 189);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;      
+    justify-content: center; 
+    font-size: 2.5vw;
+}
+
+#pokemon-screen:hover, #route-screen:hover, #region-screen:hover{
+    cursor: pointer;
+    background-color: rgb(5, 60, 109);
+}
+
+.active {
+    background-color: rgb(5, 60, 109) !important;
 }
