--- a/src/style.css
+++ b/src/style.css
@@ -95,6 +95,10 @@ body {
     background-color: rgb(82, 7, 7);
 }
 
+.card-active{
+    background-color: rgb(82, 7, 7);
+}
+
 .card-img{
     margin-top: 10%;
     width: 80%;
