--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 1vw;
+    font-size: 100%;
 }
 
 .card:hover{
