--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,13 @@ body {
     justify-content: center;
 }
 
+#logo-container a{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #logo-container img{
     height: 85%;
     width: auto;
