--- a/src/style.css
+++ b/src/style.css
@@ -104,6 +104,13 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(248, 190, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#map-real-container img{
+    height: 90%;
 }
 
 #cards-container {
