--- a/src/style.css
+++ b/src/style.css
@@ -130,9 +130,8 @@ body {
     width: 24%;
     min-width: 200px;
     aspect-ratio: 2 / 3;
-    background-color: rgb(175, 12, 12);
     border-radius: 10px;
-    color: white;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -175,11 +174,6 @@ body {
 
 .card:hover{
     cursor: pointer;
-    background-color: rgb(82, 7, 7);
-}
-
-.card-active{
-    background-color: rgb(82, 7, 7);
 }
 
 #select-container{
