--- a/src/style.css
+++ b/src/style.css
@@ -282,4 +282,58 @@ body {
 #content-container {
     width: 100%;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+/* Pokemons Screen */
+.pokemons-select{
+    width: 80%;
+    aspect-ratio: 3 / 1;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.pokemon-card-select{
+    margin-top: 20px;
+    width: 25%;
+    aspect-ratio: 3 /4;
+    background-color: #ffffff;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.plus-button{
+    width: 30%;
+    aspect-ratio: 1 / 1;
+}
+
+.plus-button img{
+    height: 100%;
+    width: 100%;
+}
+
+.pokemon-card-select:hover{
+    cursor: pointer;
+}
+
+.svg-chart-1{
+    width: 80%;
+    aspect-ratio: 3 / 1;
+    background-color: coral;
+}
+
+.svg-chart-2{
+    width: 80%;
+    aspect-ratio: 3 / 1;
+    background-color: rgb(240, 0, 240);
 }
