--- a/src/style.css
+++ b/src/style.css
@@ -291,6 +291,7 @@ body {
 
 /* Pokemons Screen */
 .pokemons-select{
+    margin-top: 20px;
     width: 80%;
     aspect-ratio: 3 / 1;
     background-color: rgb(0, 0, 0);
@@ -302,9 +303,8 @@ body {
 }
 
 .pokemon-card-select{
-    margin-top: 20px;
     width: 25%;
-    aspect-ratio: 3 /4;
+    aspect-ratio: 2 / 3;
     background-color: #ffffff;
     border-radius: 20px;
     display: flex;
@@ -324,6 +324,27 @@ body {
 
 .pokemon-card-select:hover{
     cursor: pointer;
+}
+
+.pokemons-description-area{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.pokemon-description{
+    width: 25%;
+    aspect-ratio: 2 / 1.5;
+    background-color: #585858;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    overflow-y: auto;
 }
 
 .svg-chart-1{
