--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ body {
 #top-nav-container {
     width: 100%;
     aspect-ratio: 16 / 1.15;
+    max-height: 200px;
     background-color: var(--primary-blue);
     display: flex;
     flex-direction: row;
@@ -293,8 +294,45 @@ body {
 }
 
 /* Pokemons Screen */
-.pokemons-select{
+.pokemons-search {
+    width: 80%;
+    max-width: 600px;
+    padding: 10px;
+    border-radius: 12px;
+    background-color: #f2f2f2;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
     margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.pokemons-search-img {
+    height: 32px;
+    width: 32px;
+    object-fit: contain;
+}
+
+.pokemons-search-box {
+    flex: 1;
+    height: 40px;
+    padding: 0 12px;
+    border: none;
+    border-radius: 8px;
+    font-size: 1rem;
+    background-color: white;
+    box-shadow: inset 0 0 4px rgba(0,0,0,0.05);
+}
+
+.pokemons-search-box:focus {
+    outline: 2px solid #1d15c4;
+}
+
+
+.pokemons-select{
     width: 80%;
     background-color: rgb(0, 0, 0);
     display: flex;
