--- a/src/style.css
+++ b/src/style.css
@@ -506,7 +506,7 @@ body {
     width: 55%;
 }
 
-.svg-pai-chart-1, .svg-pai-chart-2{
+.svg-pai-chart-1, .svg-pai-chart-2, .svg-pai-chart-3{
     width: 78.5%;
     height: auto;
     background-color: #1b1b1b;
@@ -519,15 +519,7 @@ body {
     margin-bottom: 20px;
 }
 
-.svg-chart-1{
-    width: 100%;
-    height: auto;
-    background-color: rgb(49, 49, 49);
-    border-radius: 10px;
-    border: 1px solid rgb(255, 255, 255);
-}
-
-.svg-chart-2{
+.svg-chart-1, .svg-chart-2, .svg-chart-3{
     width: 100%;
     height: auto;
     background-color: rgb(49, 49, 49);
