--- a/src/style.css
+++ b/src/style.css
@@ -292,10 +292,10 @@ body {
 }
 
 #content-container {
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 150px;
     padding: 20px;
 }
 
