ajustar caminhos dos arquivos para correção de referências relativas

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
 /* Font Definitions */
 @font-face {
     font-family: pokemon;
-    src: url("../assets/fonts/hollow.ttf") format("opentype");
+    src: url("./assets/fonts/hollow.ttf") format("opentype");
 }
 
 @font-face {
     font-family: pokemon_solid;
-    src: url("../assets/fonts/solid.ttf") format("opentype");
+    src: url("./assets/fonts/solid.ttf") format("opentype");
 }
 
 /* Global Styles */
