--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ body {
     width: 100%;
     aspect-ratio: 16 / 1.15;
     max-height: 200px;
-    background-color: var(--primary-blue);
+    background-color: var(--medium-grey);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -178,7 +178,7 @@ body {
 }
 
 .card {
-    width: 18%;
+    width: 19%;
     max-height: 300px;
     min-width: 140px;
     aspect-ratio: 2 / 3;
@@ -254,7 +254,7 @@ body {
 #select-container {
     width: 100%;
     aspect-ratio: 16 / 1;
-    background-color: rgb(0, 81, 255);
+    background-color: var(--medium-grey);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -267,24 +267,25 @@ body {
 #region-screen {
     flex: 1;
     height: 100%;
-    background-color: var(--light-blue);
+    background-color: var(--medium-grey);
     box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 2.5vw;
     transition: background-color 0.2s ease;
+    color: #ffffff;
 }
 
 #pokemon-screen:hover,
 #location-screen:hover,
 #region-screen:hover {
     cursor: pointer;
-    background-color: var(--dark-blue);
+    background-color: var(--dark-grey);
 }
 
 .active {
-    background-color: var(--dark-blue) !important;
+    background-color: var(--dark-grey) !important;
 }
 
 #region-chart-container, #bar-chart-container {
