--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -1,15 +1,16 @@
 /* ======= Root Variables ======= */
 :root {
     --white: #ffffff;
+    --black: #000000;
     --pokedex-base-color: #F35067;
     --pokedex-strong-color: #C81D1E;
-    --screen-medium-gray: #545358;
+    --screen-medium-gray: #303030;
     --pokedex-border-radius: 20px;
 }
 
 /* ======= Base Styles ======= */
 body {
-    background-color: var(--white);
+    background-color: var(--black);
     margin: 0;
     width: 100vw;
     display: flex;
@@ -148,10 +149,42 @@ body {
 /* Screen */
 .screen-left {
     width: 95%;
-    aspect-ratio: 5 / 3;
-    background-color: var(--screen-medium-gray);
-    border: 5px solid var(--white);
+    aspect-ratio: 5 / 3.25;
+    background-color: #D1D5CD;
     margin-top: 15px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.top-nav-left-screen{
+    width: 100%;
+    height: 7.5%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
+}
+
+.botao-5{
+    height: 50%;
+    aspect-ratio: 1 / 1;
+    border: 2px solid #545358;
+    background-color: #C81D1E;
+}
+
+.map-left-screen{
+    width: 90%;
+    height: 77.5%;
+    background-color: var(--screen-medium-gray);
+    border-radius: 10px;
+}
+
+.botton-nav-left-screen{
+    width: 100%;
+    height: 15%;
 }
 
 /* Region + Location Select */
@@ -177,6 +210,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
+}
+
+.left-button{
+    background-color: #C62221;
+}
+
+.right-button{
+    background-color: #809CD0;
+}
+
+.left-button:hover{
+    background-color: #ac1c1c;
+}
+
+.right-button:hover{
+    background-color: #677faa;
 }
 
 .left-button:hover, .right-button:hover {
@@ -184,7 +234,7 @@ body {
 }
 
 .left-button img, .right-button img {
-    width: 100%;
+    height: 45%;
 }
 
 /* ======= Page 2 ======= */
@@ -203,4 +253,77 @@ body {
     background-color: var(--pokedex-base-color);
     border-top-right-radius: var(--pokedex-border-radius);
     border-bottom-right-radius: var(--pokedex-border-radius);
+    display: flex;
+    flex-direction: row;
+}
+
+.main-content-right{
+    width: calc(100% - 20px);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.screen-right{
+    width: 100%;
+    height: calc(100% - 40px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards-display{
+    width: 95%;
+    aspect-ratio: 2 / 1;
+    background-color: #7EBF60;
+    margin-top: 15px;
+    border-radius: 10px;
+}
+
+.screen-select {
+    margin-top: 15px;
+    width: 95%;
+    height: 10%;
+    border-radius: 5px;
+    background-color: #859BD3;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.region-button, .location-button, .pokemons-button {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.region-button:hover, .location-button:hover, .pokemons-button:hover {
+    cursor: pointer;
+    background-color: #6d7eaa;
+}
+
+.region-button img, .location-button img, .pokemons-button img {
+    height: 40%;
+}
+
+.region-button{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.pokemons-button{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.margin-right{
+    height: 100%;
+    width: 20px;
+    background-color: var(--pokedex-strong-color);
+    border-bottom-right-radius: var(--pokedex-border-radius);
+    border-top-right-radius: var(--pokedex-border-radius);
 }
